--- a/public/assests/css/home.styles.css
+++ b/public/assests/css/home.styles.css
@@ -1,13 +1,21 @@
 
+.body{
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .image-slider{
-    width: 100%;
-    height: 100%;
+    width: 800px;
+    height: 700px;
     border-radius: 10px;
     overflow: hidden;
 }
-.image-slider .slides{
-    width: 100%;
-    height: 100%;
+.slides{
+    width: 500%;
+    height: 700px;
     border-radius: 10px;
     display: flex;
 }
@@ -19,6 +27,19 @@
     transition: 2s;
 }
 .slide img{
-    width: 100%;
-    height: 100%;
+    width: 800px;
+    height: 700px;
+}
+
+/*css for manual slide navigation*/
+
+.navigation-manual{
+
+}
+.manual-btn{
+    border: 2px solid black;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
 }
