--- a/public/assests/css/home.styles.css
+++ b/public/assests/css/home.styles.css
@@ -12,7 +12,8 @@ body{
 
 .slider{
     width: 100%;
-    height: 850px;
+    height: 750px;
+    margin-bottom: 48px;
     border-radius: 10px;
     overflow: hidden;
   }
@@ -38,6 +39,31 @@ body{
     height: 750px;
 }
 
+@media only screen and (max-width: 900px) {
+    .slider{
+        width: 100%;
+        height: 450px;
+        border-radius: 10px;
+        margin-bottom: 48px;
+        overflow: hidden;
+      }
+    .slides{
+        width: 500%;
+        height: 450px;
+        display: flex;
+    }
+
+    .slide img{
+        width: 100%;
+        height: 450px;
+    }
+
+    .slides .navigation-auto{
+        margin-top: 470px;
+    }
+
+}
+
 @media only screen and (max-width: 600px) {
     .slider{
         width: 100%;
@@ -57,10 +83,12 @@ body{
     }
 
     .slides .navigation-auto{
-        margin-top: 270px;
+        margin-top: 320px;
     }
 
 }
+
+
   
 /*css for manual slide navigation*/
 
@@ -110,7 +138,8 @@ body{
 .navigation-auto{
     position: absolute;
     display: flex;
-    width: 95%;
+    width: 98%;
+    overflow: hidden;
     justify-content: center;
     margin-top: 770px;
 }
@@ -145,92 +174,152 @@ background: #31d65a;
 
 /*category-container*/
 
-.category-container{
+/* Style the category container */
+.category-container {
+    text-align: center; /* Center-align the content */
+    margin: 0;
+    padding: 20px;
+    background-color: #f7f7f7; /* Background color for the container */
+  }
+  
+  /* Style the heading */
+  .category-container h1 {
+    font-size: 24px;
+    color: #333; /* Text color */
+  }
+  
+  /* Style the category list */
+  .categories {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Center-align the list items horizontally */
+    gap: 20px; /* Spacing between list items */
+    margin-top: 20px; /* Add some top margin */
+  }
+  
+  /* Style individual list items */
+  .li {
+    flex: 1;
+    max-width: calc(50% - 20px); /* Two items per row with gap */
+    padding: 10px;
+    text-align: center;
+    background-color: #fff; /* Background color for each item */
+    border: 1px solid #ddd; /* Border around each item */
+    border-radius: 5px; /* Rounded corners */
+  }
+  
+  /* Style the links within list items */
+  .li a {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #333; /* Link text color */
+  }
+  
+  /* Style the images within list items */
+  .li img {
+    max-width: 100%;
+    align-items: center;
+    height: auto;
+    margin-bottom: 10px; /* Add some space below the image */
+  }
+  
+  /* Media query for smaller screens */
+  @media (max-width: 600px) {
+    .categories {
+      flex-direction: column; /* Stack list items vertically on smaller screens */
+    }
+  
+  }
+
+
+
+  /*WhoAreWe*/
+
+
+.WhoAreWe-container{
     margin: 0;
     padding: 0;
-}
-
-.category-container h1{
-    color: #404145;
-    font-family: Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
-    font-weight: 700;
-    margin-bottom: 40px;
-}
-
-.category-container ul{
-    list-style: none;
-    list-style-image: none;
-}
-
-.category-container ul .list-1, .category-container ul .list-2{
+    width: 100%;
+    height: 320px;
     display: flex;
-    justify-content: space-between;
-    padding: 32px;
+    justify-content: space-around;
 }
 
-.category-container ul li{
-    display: flex;
-    flex-direction: column;
-    border: 1px solid #c5c6c9;
-    border-radius: 10px;
-    height: 100px;
-    width: 200px;
-    padding: 16px;
-    margin-left: 16px;
+.WhoAreWe-container .desc{
+    width: 70%;
+    max-height: 320px;
+    border-right: 1px solid #162b1d;
+    background-color: #162b1d;
+    padding-left: 32px;
+    padding-right: 32px;
 }
 
-.category-container a{
+.WhoAreWe-container .WhoAreWe-header{
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 48px;
+    color: #ddd;
 }
 
-.category-container img{
+.WhoAreWe-container .desc-content{
+    display: flex;
     justify-content: center;
-    width: 48px;
-    height: 48px
+    align-items: center;
+    max-height: 320px;
 }
 
-@media only screen and (max-width: 600px) {
+.WhoAreWe-container p{
+    text-align: justify;
+    color: #ddd;
+    padding: 0;
+    margin: 0;
+}
+
+.WhoAreWe-container .desc img{
+    width: 150px;
+    height: auto;
+    float: right;
+    align-items:flex-end;
+}
+
+.WhoAreWe-container .image{
+    width: 30%;
+    height: auto;
+}
+
+.WhoAreWe-container .image img{
+    width: 100%;
+    height: 320px;
+}
 
 
-    .category-container{
-        margin: 0;
-        padding: 0;
+@media (max-width: 800px) {
+    .WhoAreWe-container .image{
+        display: none;
+    }
+
+    .WhoAreWe-container .desc{
         width: 100%;
+        font-size: 32px;
     }
 
-    .categories-list{
-        display: flex;
-        margin: 0;
-        padding: 0;
-        width: 100%;
-    }
-
-    
-    .categories-list li{
-        margin-bottom: 5px;
-        margin-left: 0;
-        margin-right: 0;
-        padding: 0;
-    }
-    
-    .category-container ul .list-1, .category-container ul .list-2{
-        display: flex;
-        flex-direction: column;
-    }
+}
 
 
-    .category-container ul li{
-        display: flex;
-        flex-direction: column;
-        border: 1px solid #c5c6c9;
-        border-radius: 10px;
-        height: 70px;
-        width: 140px;
-        padding: 16px;
-        margin-left: 16px;
+@media ((min-width: 800px) and (max-width: 1000px)) {
+    .WhoAreWe-container .image{
+        width: 45%;
     }
 
+    .WhoAreWe-container .desc{
+        width: 55%;
+    }
+  
 }
