--- a/public/assests/css/home.styles.css
+++ b/public/assests/css/home.styles.css
@@ -1,5 +1,6 @@
 body{
-    font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;;
+    font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
+    margin: 0;
 }
 
 .slider-container{
@@ -178,7 +179,7 @@ background: #31d65a;
 .category-container {
     text-align: center; /* Center-align the content */
     margin: 0;
-    padding: 16px 32px 16px 32px;
+    padding: 32px;
     background-color: #f7f7f7; /* Background color for the container */
     margin-top: 16px;
   }
@@ -186,6 +187,8 @@ background: #31d65a;
   /* Style the heading */
   .category-container h1 {
     font-size: 24px;
+    padding: 0;
+    margin: 0;
     color: #333; 
   }
   
@@ -194,20 +197,28 @@ background: #31d65a;
     display: flex;
     flex-wrap: wrap; 
     gap: 16px;
+    margin-top: 32px;
   }
   
   /* Style individual list items */
   .li {
     flex: 1 1 15%;
     width: 10%;
-    margin-top: 32px;
+    margin-top: 8px;
     padding: 10px;
     text-align: center;
     background-color: #fff; /* Background color for each item */
     border: 1px solid #ddd; /* Border around each item */
     border-radius: 5px; /* Rounded corners */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
   }
   
+  .li:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+
   /* Style the links within list items */
   .li a {
     display: flex;
@@ -289,6 +300,7 @@ background: #31d65a;
 .WhoAreWe-container p{
     text-align: justify;
     color: #ddd;
+    resize: none;
     padding: 0;
     margin: 0;
 }
@@ -360,4 +372,20 @@ background: #31d65a;
         font-size: 28px;
     }
   
+}
+
+
+.topgig-container{
+    text-align: center; /* Center-align the content */
+    margin: 0;
+    padding: 32px;
+    background-color: #f7f7f7; /* Background color for the container */
+    margin-top: 32px;
+}
+
+.topgig-header h1{
+    font-size: 24px;
+    padding: 0;
+    margin: 0;
+    color: #333; 
 }
