--- a/public/assests/css/test.styles.css
+++ b/public/assests/css/test.styles.css
@@ -4,22 +4,58 @@
   margin-right: 0;
   margin-bottom: 0;
   padding: 32px 16px 32px 16px;
+  position: relative;
 }
-
+.card-slider svg{
+  width: 32px;
+  height: 32px;
+  background-color: #fff;
+  text-align: center;
+  line-height: 32px;
+  border: 2px solid #ddd; 
+  border-radius: 50%;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.card-slider svg:first-child{
+  left: -8px;
+}
+.card-slider svg:last-child{
+  right: -8px;
+}
 .card-slider .carousel{
-  display: flex;
+  display: grid;
+  grid-auto-flow: column;  
+  grid-auto-columns: calc((100%/4) - 16px);
   gap: 20px;
+  overflow: hidden;
 }
-
+.card-slider ul{
+  padding-left: 0;
+  margin-left: 16px;
+}
 .card-slider .carousel .card{
-  margin: 0;
-  padding: 0;
-  width: (25% - 20px);
+  list-style: none;
+  border: 1px solid #ddd; 
+  cursor: pointer;
+}
+.card-slider .carousel .card .img img{
+  width: 100%;
+  min-height: 150px;
   height: auto;
-  border-width: 2px;
-  border: 1px solid #ddd;
+  border-radius: 8px;
 }
 
+@media screen and (max-width: 900px) {
+  .card-slider .carousel{
+    grid-auto-columns: calc((100%/3) - 16px);
+  }
+}
 
-
-
+@media screen and (max-width: 600px) {
+  .card-slider .carousel{
+    grid-auto-columns: calc((100%) - 16px);
+  }
+}
