--- a/public/assests/css/test.styles.css
+++ b/public/assests/css/test.styles.css
@@ -20,10 +20,10 @@
   transform: translateY(-50%);
 }
 .card-slider svg:first-child{
-  left: -8px;
+  left: 0px;
 }
 .card-slider svg:last-child{
-  right: -8px;
+  right: 0px;
 }
 .card-slider .carousel{
   display: grid;
@@ -34,7 +34,7 @@
 }
 .card-slider ul{
   padding-left: 0;
-  margin-left: 16px;
+  margin-left: 7px;
 }
 .card-slider .carousel .card{
   list-style: none;
@@ -48,14 +48,38 @@
   border-radius: 8px;
 }
 
+.card-slider .carousel .card .user-details{
+  display: flex;
+}
+.card-slider .carousel .card .user-details .profile-pic{
+  margin-right: 2px;
+}
+
+.card-slider .carousel .card .user-details .profile-pic img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.checked {
+  color: orange;
+}
 @media screen and (max-width: 900px) {
   .card-slider .carousel{
     grid-auto-columns: calc((100%/3) - 16px);
+  }
+  .card-slider ul{
+    padding-left: 0;
+    margin-left: 4px;
+    margin-right: -6px;
   }
 }
 
 @media screen and (max-width: 600px) {
   .card-slider .carousel{
-    grid-auto-columns: calc((100%) - 16px);
+    grid-auto-columns: calc((100%));
+  }
+  .card-slider ul{
+    padding-left: 0;
+    margin-left: 0;
   }
 }
