--- a/public/assests/css/test.styles.css
+++ b/public/assests/css/test.styles.css
@@ -50,15 +50,17 @@
 
 .card-slider .carousel .card .user-details{
   display: flex;
+  align-items: center;
 }
 .card-slider .carousel .card .user-details .profile-pic{
   margin-right: 2px;
 }
 
 .card-slider .carousel .card .user-details .profile-pic img{
-  width: 50px;
-  height: 50px;
+  width: 38px;
+  height: 38px;
   border-radius: 50%;
+  object-fit: cover;
 }
 .checked {
   color: orange;
