--- a/public/assests/css/test.styles.css
+++ b/public/assests/css/test.styles.css
@@ -1,7 +1,7 @@
 .card-slider{
   margin-top: 32px;
-  margin-left: 0;
-  margin-right: 0;
+  margin-left: 32px;
+  margin-right: 32px;
   margin-bottom: 0;
   padding: 32px 16px 32px 16px;
   position: relative;
@@ -31,6 +31,10 @@
   grid-auto-columns: calc((100%/4) - 16px);
   gap: 20px;
   overflow: hidden;
+}
+.card-slider .carousel.dragging.card{
+  cursor: grab;
+  user-select: none;
 }
 .card-slider ul{
   padding-left: 0;
