--- a/public/assests/css/addJob.styles.css
+++ b/public/assests/css/addJob.styles.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     padding: 0;
     font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
+    color: #62646a;
 }
 
 hr{
@@ -23,22 +24,31 @@ hr{
     width: 100%;
     margin-left: 32px;
     padding: 32px 16px 32px 16px;
-    border: 2px solid black;
     justify-content: center;
     overflow: scroll;
 }
 
-.addjob-container .type-1:before{
-    
+.type-1, .type-2 {
+    display: block;
 }
 
-.addjob-container .type-1:before{
-    
+.addjob-container .type-1{
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    color: #404145;
+    font-family: Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
-.addjob-container input, .addjob-container textarea{
+
+.addjob-container input[type="text"], .addjob-container textarea{
     margin-bottom: 32px;
+    border-radius: 4px;
     width: 100%;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    border: 1px solid #c5c6c9;
 }
 
 .addjob-container textarea{
