--- a/public/assests/css/addJob.styles.css
+++ b/public/assests/css/addJob.styles.css
@@ -3,29 +3,41 @@ body{
     padding: 0;
     font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
     color: #62646a;
-}
-
-hr{
-    margin: 96px 32px 32px 32px;
+    overflow: hidden;
 }
 
 .addjob-container{
     display: flex;
-    height: 100%;
     margin: 32px;
     padding: 32px 16px 32px 16px;
 }
 
-.img{
-    justify-content: center;
+.addjob-container .img .header{
+    font-size: 40px;
+    line-height: 120%;
+    font-weight: 700;
+    color: #404145;;
 }
 
 .addjob-container .form{
     width: 100%;
+    margin-top: 0;
     margin-left: 32px;
-    padding: 32px 16px 32px 16px;
+    padding-left: 16px;
+    padding-right: 16px;
     justify-content: center;
-    overflow: scroll;
+    border-left: #c5c6c9 10px solid;
+}
+
+.addjob-container .form form{
+    height: 600px;
+}
+
+.addjob-container .page {
+    height: 500px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding-right: 16px;
 }
 
 .type-1, .type-2 {
@@ -40,6 +52,14 @@ hr{
     font-family: Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
+.addjob-container input[type="text"]{
+    height: 40px;
+    font-size: 16px;
+}
+
+.addjob-container textarea{
+    font-size: 16px;
+}
 
 .addjob-container input[type="text"], .addjob-container textarea{
     margin-bottom: 32px;
@@ -55,22 +75,71 @@ hr{
     width: 100%;
 }
 
-/* Scrollbar styles */
-::-webkit-scrollbar {
-    width: 12px;
-    height: 12px;
-    }
-    
-::-webkit-scrollbar-track {
-border: 1px solid yellowgreen;
-border-radius: 10px;
-}
-    
-::-webkit-scrollbar-thumb {
-background: yellowgreen;  
-border-radius: 10px;
+.addjob-container .custom-file-upload{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    height: 40px;
+    width: 200px;
+    border: 1px solid #c5c6c9;
+    border-radius: 4px;
+    margin-bottom: 32px;
 }
 
-::-webkit-scrollbar-thumb:hover {
-background: #88ba1c;  
+.addjob-container .custom-file-upload svg{
+    height: auto;
+    width: 20px;
+    color: #404145;
+}
+
+.addjob-container input[type="file"]{
+    display: none;
+}
+
+.addjob-container select{
+    margin-bottom: 32px;
+}
+
+/* Scrollbar styles */
+/* button styles */
+button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #1dbf73;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 22px;
+    width: 200px;
+    height: 38px;
+    width: 114px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+}
+  
+button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+  
+button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+  
+button:hover span {
+    padding-right: 25px;
+}
+  
+button:hover span:after {
+    opacity: 1;
+    right: 0;
 }
