add job ui done

--- a/public/assests/css/addJob.styles.css
+++ b/public/assests/css/addJob.styles.css
@@ -5,20 +5,18 @@ body{
     color: #62646a;
     overflow: hidden;
 }
-
 .addjob-container{
     display: flex;
+    height: 600px;
     margin: 32px;
     padding: 32px 16px 32px 16px;
 }
-
 .addjob-container .img .header{
     font-size: 40px;
     line-height: 120%;
     font-weight: 700;
     color: #404145;;
 }
-
 .addjob-container .form{
     width: 100%;
     margin-top: 0;
@@ -28,22 +26,21 @@ body{
     justify-content: center;
     border-left: #c5c6c9 10px solid;
 }
-
 .addjob-container .form form{
     height: 600px;
 }
-
 .addjob-container .page {
-    height: 500px;
+    height: 520px;
     overflow-y: scroll;
     overflow-x: hidden;
+    padding-top: 8px;
+    padding-bottom: 16px;
     padding-right: 16px;
+    margin-bottom: 16px;
 }
-
 .type-1, .type-2 {
     display: block;
 }
-
 .addjob-container .type-1{
     font-weight: 600;
     font-size: 16px;
@@ -51,16 +48,14 @@ body{
     color: #404145;
     font-family: Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
-
 .addjob-container input[type="text"]{
     height: 40px;
     font-size: 16px;
 }
-
 .addjob-container textarea{
     font-size: 16px;
+    width: 100%;
 }
-
 .addjob-container input[type="text"], .addjob-container textarea{
     margin-bottom: 32px;
     border-radius: 4px;
@@ -70,11 +65,6 @@ body{
     justify-content: space-between;
     border: 1px solid #c5c6c9;
 }
-
-.addjob-container textarea{
-    width: 100%;
-}
-
 .addjob-container .custom-file-upload{
     display: flex;
     justify-content: center;
@@ -86,23 +76,25 @@ body{
     border-radius: 4px;
     margin-bottom: 32px;
 }
-
 .addjob-container .custom-file-upload svg{
     height: auto;
     width: 20px;
     color: #404145;
 }
-
 .addjob-container input[type="file"]{
     display: none;
 }
-
 .addjob-container select{
     margin-bottom: 32px;
+    height: 40px;
+    width: 200px;
+    border-radius: 4px;
+    cursor: pointer;
 }
-
-/* Scrollbar styles */
-/* button styles */
+.addjob-container .categories, .addjob-container input[type="date"]{
+    font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
+    color: #404145;
+}
 button {
     display: inline-block;
     border-radius: 4px;
@@ -116,16 +108,14 @@ button {
     width: 114px;
     transition: all 0.5s;
     cursor: pointer;
-    margin: 5px;
+    justify-content: end;
 }
-  
 button span {
     cursor: pointer;
     display: inline-block;
     position: relative;
     transition: 0.5s;
 }
-  
 button span:after {
     content: '\00bb';
     position: absolute;
@@ -133,12 +123,10 @@ button span:after {
     top: 0;
     right: -20px;
     transition: 0.5s;
-}
-  
+} 
 button:hover span {
     padding-right: 25px;
 }
-  
 button:hover span:after {
     opacity: 1;
     right: 0;
