--- a/public/assests/css/home.styles.css
+++ b/public/assests/css/home.styles.css
@@ -469,6 +469,7 @@ background: #31d65a;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 48px;
     color: #ddd;
+    line-height: 120%;
 }
 
 .WhoAreWe-container .desc-content{
@@ -476,6 +477,7 @@ background: #31d65a;
     justify-content: center;
     align-items: center;
     padding-bottom: 32px;
+    font-size: 22px;
 }
 
 .WhoAreWe-container p{
@@ -534,6 +536,7 @@ background: #31d65a;
 
     .WhoAreWe-container .desc{
         width: 100%;
+        height: auto;
         font-size: 22px;
     }
 
