--- a/public/assests/css/home.styles.css
+++ b/public/assests/css/home.styles.css
@@ -507,14 +507,15 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 32px;
 }
 .topgig-header h1{
     font-size: 24px;
     padding: 0;
     margin: 0;
     color: #333; 
-    padding-left: 32px;
-    padding-right: 32px;
+    padding-left: 48px;
+    padding-right: 48px;
 }
 .topgig-header svg{
     width: 32px;
