--- a/public/assests/css/register.styles.css
+++ b/public/assests/css/register.styles.css
@@ -1,26 +1,28 @@
 body {
-    background-color: #007bff;
+    font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
+    background-color: #ffffff;    
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    height: 100vh; /*for normal zooming */
+    margin: 0 auto;
+    height: 100vh;
   }
   .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 32px 16px 32px 16px;
+    width: 600px;
+    height: 150px;
     background-color: white;
     border-radius: 2px;
-    display: block;
-    margin: auto;
-    padding-top: 30px;
-    padding-left: 60px;
-    padding-right: 100px;
-    padding-bottom: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
   input[type="text"],
   input[type="password"],
   input[type="email"],
   input[type="date"] {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     width: 100%;
     padding: 15px;
     margin: 5px 0 0 0;
@@ -48,7 +50,9 @@ body {
     border-radius: 5px;
     background: #f8f8f8;
   }
-  
+  .fieldset a{
+    text-decoration: none;
+  }
   .registerbtn {
     color: white;
     padding-left: 40px;
@@ -57,36 +61,25 @@ body {
     padding-top: 12px;
     border-radius: 5px;
     border: none;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     transition: ease-in-out 0.3s;
     font-weight: 500;
     font-size: 14px;
-    background-color: #007bff;
+    background-color: #31d65a;
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.1), 0 4px 6px 0 rgba(0, 0, 0, 0.05);
   }
   .registerbtn:hover {
-    color: #007bff;
+    color: #31d65a;
     background-color: rgb(255, 255, 255);
     font-weight: 500;
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.1), 0 4px 6px 0 rgba(0, 0, 0, 0.05);
     
   }
-  .agreement-condition {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  }
-  
-  label {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  }
   .header {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: xx-large;
-    margin-bottom: 30px;
     font-weight: 500;
   }
   .error {
     display: block;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12px;
     color: red;
   }
@@ -95,8 +88,7 @@ body {
   }
   .normal-blue-font
   {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    color: #007bff;
+    color: #31d65a;
     font-size: small;
     padding-bottom: 20px;
     text-decoration: none;
