--- a/public/assests/css/login.styles.css
+++ b/public/assests/css/login.styles.css
@@ -4,18 +4,18 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; 
+  height: 90vh; 
 }
 .container {
   background-color: white;
   border-radius: 10px;
   border-color: #f7f7f7;
-  display: block;
+  display: flex;
+  flex-direction: column;
   margin: auto;
-  padding-top: 30px;
-  padding-left: 60px;
-  padding-right: 100px;
-  padding-bottom: 20px;
+  min-width: 350px;
+  width: 100%;
+  padding: 28px 16px 28px 16px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 input[type="text"],
@@ -26,6 +26,7 @@ input[type="date"] {
   padding: 15px;
   margin: 5px 0 0 0;
   display: inline-block;
+  box-sizing: border-box;
   border: none;
   border-radius: 5px;
   background: #f6f6f6;
@@ -56,6 +57,7 @@ input[type="date"]:focus {
   padding-bottom: 12px;
   padding-top: 12px;
   border-radius: 5px;
+  width: 100%;
   border: none;
   transition: ease-in-out 0.3s;
   font-weight: 500;
@@ -65,6 +67,7 @@ input[type="date"]:focus {
 }
 .registerbtn:hover {
   color: #31d65a;
+  width: 100%;
   background-color: rgb(255, 255, 255);
   font-weight: 500;
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.1), 0 4px 6px 0 rgba(0, 0, 0, 0.05);
@@ -72,10 +75,12 @@ input[type="date"]:focus {
 }
 .header {
   color: #333;
-  align-content: center;
+  display: flex;
+  justify-content: center;
   font-size: xx-large;
   margin-bottom: 30px;
   font-weight: 500;
+  width: 100%;
 }
 .error {
   display: block;
