--- a/public/assests/css/verify.styles.css
+++ b/public/assests/css/verify.styles.css
@@ -1,107 +1,148 @@
 /* common parts */
 body {
-    background-color: #007bff;
+  font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
+  background-color: #ffffff;    
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  height: 100vh;
+}
+.container {
+  background-color: white;
+  border-radius: 10px;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  padding: 32px 16px 32px 16px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+input[type="text"],input[type="email"]{
+  width: 100%;
+  box-sizing: border-box;
+  padding: 15px;
+  border: none;
+  border-radius: 5px;
+  background: #f6f6f6;
+  transition: ease-in-out 0.2s;
+}
+input[type="text"]:hover ,input[type="email"]:hover{
+  background-color: #e9e8e8;
+}
+.registerbtn {
+  color: white;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 12px;
+  padding-top: 12px;
+  margin-left: 8px;
+  border-radius: 5px;
+  border: none;
+  transition: ease-in-out 0.3s;
+  font-weight: 500;
+  font-size: 14px;
+  background-color: #31d65a;
+}
+.registerbtn:hover {
+  color: #333;
+  background-color: rgb(241, 241, 241);
+  font-weight: 500;
+}
+label {
+  font-weight: 500;
+}
+.header {
+  font-size: xx-large;
+  margin-bottom: 16px;
+  font-weight: 500;
+}
+.error {
+  display: block;
+  font-size: 12px;
+  color: red;
+}
+.fieldset_1{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 16px;
+  margin-left: 16px;
+  margin-right: 16px;
+  width: 100%;
+}
+.fieldset_2{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  min-width: 432px;
+}
+.fieldset_2 .registerbtn{
+  width: 50%;
+}
+.fieldset_2 .resendbtn{
+  width: 50%;
+}
+
+/* custom code */
+
+.resendbtn {
+  background-color: #333;
+  width: 100%;
+  color: white;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 12px;
+  padding-top: 12px;
+  margin-right: 8px;
+  border-radius: 5px;
+  border: none;
+  transition: ease-in-out 0.3s;
+  font-weight: 500;
+  font-size: 14px;
+}
+.resendbtn:hover {
+  color:#333;
+  background-color: #fff;
+  font-weight: 500;
+}
+@media only screen and (max-width: 600px) {
+  .container {
+      width: auto;
+      margin-left: 16px;
+      margin-right: 16px;
+  }
+  .fieldset_1{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /*for normal zooming */
   }
-  .container {
-    background-color: white;
-    border-radius: 2px;
-    display: block;
-    margin: auto;
-    padding-top: 30px;
-    padding-left: 60px;
-    padding-right: 100px;
-    padding-bottom: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  .fieldset_1 .outer-label{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-  input[type="text"],input[type="email"]{
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  .fieldset_2{
+    margin: 0;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+  }
+  .fieldset_2{
+    min-width: 100%;
+  }
+  .fieldset_2 .registerbtn {
     width: 100%;
-    padding: 15px;
-    margin: 5px 0 0 0;
-    display: inline-block;
-    border: none;
-    border-radius: 5px;
-    background: #f6f6f6;
-    transition: ease-in-out 0.2s;
+    margin-bottom: 8px;
+    margin-left: 0;
   }
-  input[type="text"]:hover ,input[type="email"]:hover{
-    background-color: #e9e8e8;
-  }
-  input[type="text"]:focus,input[type="email"]:focus{
+  .fieldset_2 .resendbtn{
     width: 100%;
-    padding: 15px;
-    margin: 5px 0 0px 0;
-    display: inline-block;
-    border: none;
-    border-radius: 5px;
-    background: #f8f8f8;
+    margin-right: 0;
   }
-  
-  .registerbtn {
-    color: white;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 12px;
-    padding-top: 12px;
-    border-radius: 5px;
-    border: none;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    transition: ease-in-out 0.3s;
-    font-weight: 500;
-    font-size: 14px;
-    background-color: #007bff;
-  }
-  .registerbtn:hover {
-    color: #007bff;
-    background-color: rgb(241, 241, 241);
-    font-weight: 500;
-  }
-  .agreement-condition {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  }
-  
-  label {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500;
-  }
-  .header {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: xx-large;
-    margin-bottom: 30px;
-    font-weight: 500;
-  }
-  .error {
-    display: block;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 12px;
-    color: red;
-  }
-  .fieldset {
-    margin: 0 0 15px 0;
-  }
-  /* custom code */
-  
-  .resendbtn {
-    background-color: #686868;
-    color: white;
-    width: 40%;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 12px;
-    padding-top: 12px;
-    border-radius: 5px;
-    border: none;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    transition: ease-in-out 0.3s;
-    font-weight: 500;
-    font-size: 14px;
-  }
-  .resendbtn:hover {
-    color:#3d3d3d;
-    background-color: #f5f0f0;
-    font-weight: 500;
-  }
+
+}
