--- a/public/assests/css/sellerHeader.styles.css
+++ b/public/assests/css/sellerHeader.styles.css
@@ -168,16 +168,16 @@ header .upperHeader{
     display: flex;
     justify-content: flex-end;
 }
-
+.nav-links .wordLink:hover {
+    text-decoration: underline;
+    border-bottom: 4px solid #1dbf73;
+    padding-bottom: 2px;
+    text-decoration: none;
+}
 .nav-links a {
     color: #333;
     text-decoration: none;
 }
-
-.nav-links a:hover {
-    text-decoration: underline;
-}
-
 .upperHeader svg {
     width: 24px;
     height: 24px;
